# copilot-rust-app

./: Cargo.toml  Dockerfile  README.md
copilot/: .workspace
copilot/pipelines/copilot-rust-app-master/: buildspec.yml  manifest.yml
copilot/server/: manifest.yml
src/: main.rs
